--- a/src/locales/ja/common.json
+++ b/src/locales/ja/common.json
@@ -70,7 +70,22 @@
         "connect": "接続",
         "connected": "接続済み",
         "serverTime": "サーバー時間",
-        "memoryUsed": "メモリ使用量"
+        "memoryUsed": "メモリ使用量",
+        "configDialog": {
+            "title": "管理キー",
+            "description": "プライベートサーバーディレクトリからconfig.jsonファイルを選択するか、管理キーを手動で入力してください。これにより、管理キーがブラウザのキャッシュに保存され、後で再利用できます。他の場所には保存されません。",
+            "selectFile": "設定ファイルを選択（コンピュータから）",
+            "selectFileDesc": "プライベートサーバーディレクトリからconfig.jsonファイルを選択してください",
+            "enterKey": "管理キーを手動で入力",
+            "enterKeyDesc": "管理キーの値を直接入力します。config.jsonファイルの中の'MuipServer'、次に'AdminKey'を探してください。",
+            "adminKeyInput": "管理キー",
+            "useRecent": "最近使用したキーを使用（ブラウザキャッシュ）",
+            "useRecentDesc": "最も最近使用した管理キーを使用して接続します"
+        },
+        "messages": {
+            "configError": "設定ファイルの読み込みエラー。AdminKeyを含む有効なconfig.jsonであることを確認してください",
+            "fetchError": "サーバー情報の取得に失敗しました"
+        }
     },
     "account": {
         "playerInfo": {
