--- a/src/locales/pt/common.json
+++ b/src/locales/pt/common.json
@@ -70,7 +70,22 @@
         "connect": "Conectar",
         "connected": "Conectado",
         "serverTime": "Hora do Servidor",
-        "memoryUsed": "Memória Usada"
+        "memoryUsed": "Memória Usada",
+        "configDialog": {
+            "title": "Chave de Admin",
+            "description": "Por favor, selecione um arquivo config.json do seu diretório de servidor privado ou insira a chave de admin manualmente. Isso salvará a chave de admin no cache do seu navegador, para que você possa reutilizá-la mais tarde. Ela não será armazenada em nenhum outro lugar.",
+            "selectFile": "Selecionar Arquivo de Configuração (do computador)",
+            "selectFileDesc": "Escolha o arquivo config.json do seu diretório de servidor privado",
+            "enterKey": "Inserir Chave de Admin Manualmente",
+            "enterKeyDesc": "Insira diretamente o valor da chave de admin. Procure por 'MuipServer' e depois 'AdminKey' no arquivo config.json.",
+            "adminKeyInput": "Chave de Admin",
+            "useRecent": "Usar Chave Recente (cache do navegador)",
+            "useRecentDesc": "Conectar usando a chave de admin mais recentemente utilizada"
+        },
+        "messages": {
+            "configError": "Erro ao carregar o arquivo de configuração. Por favor, certifique-se de que é um config.json válido com AdminKey",
+            "fetchError": "Falha ao buscar informações do servidor"
+        }
     },
     "account": {
         "playerInfo": {
