--- a/src/locales/ru/common.json
+++ b/src/locales/ru/common.json
@@ -70,7 +70,22 @@
         "connect": "Подключить",
         "connected": "Подключено",
         "serverTime": "Время сервера",
-        "memoryUsed": "Используемая память"
+        "memoryUsed": "Используемая память",
+        "configDialog": {
+            "title": "Ключ администратора",
+            "description": "Пожалуйста, выберите файл config.json из вашего каталога частного сервера или введите ключ администратора вручную. Это сохранит ключ администратора в кэше вашего браузера, чтобы вы могли использовать его позже. Он не будет сохранен нигде больше.",
+            "selectFile": "Выберите файл конфигурации (с компьютера)",
+            "selectFileDesc": "Выберите файл config.json из вашего каталога частного сервера",
+            "enterKey": "Введите ключ администратора вручную",
+            "enterKeyDesc": "Введите значение ключа администратора напрямую. Найдите 'MuipServer', затем 'AdminKey' в файле config.json.",
+            "adminKeyInput": "Ключ администратора",
+            "useRecent": "Использовать последний ключ (кэш браузера)",
+            "useRecentDesc": "Подключитесь, используя последний использованный ключ администратора"
+        },
+        "messages": {
+            "configError": "Ошибка загрузки файла конфигурации. Пожалуйста, убедитесь, что это действительный config.json с AdminKey",
+            "fetchError": "Не удалось получить информацию о сервере"
+        }
     },
     "account": {
         "playerInfo": {
