--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -70,7 +70,22 @@
         "connect": "เชื่อมต่อ",
         "connected": "เชื่อมต่อแล้ว",
         "serverTime": "เวลาของเซิร์ฟเวอร์",
-        "memoryUsed": "การใช้หน่วยความจำ"
+        "memoryUsed": "การใช้หน่วยความจำ",
+        "configDialog": {
+            "title": "คีย์ผู้ดูแลระบบ",
+            "description": "โปรดเลือกไฟล์ config.json จากไดเรกทอรีเซิร์ฟเวอร์ส่วนตัวของคุณ หรือป้อนคีย์ผู้ดูแลระบบด้วยตนเอง ซึ่งจะบันทึกคีย์ผู้ดูแลระบบลงในแคชของเบราว์เซอร์ของคุณ เพื่อให้คุณสามารถใช้งานได้ในภายหลัง จะไม่ถูกเก็บไว้ที่อื่น",
+            "selectFile": "เลือกไฟล์การตั้งค่า (จากคอมพิวเตอร์)",
+            "selectFileDesc": "เลือกไฟล์ config.json จากไดเรกทอรีเซิร์ฟเวอร์ส่วนตัวของคุณ",
+            "enterKey": "ป้อนคีย์ผู้ดูแลระบบด้วยตนเอง",
+            "enterKeyDesc": "ป้อนค่าคีย์ผู้ดูแลระบบโดยตรง มองหา 'MuipServer' แล้ว 'AdminKey' ในไฟล์ config.json",
+            "adminKeyInput": "คีย์ผู้ดูแลระบบ",
+            "useRecent": "ใช้คีย์ล่าสุด (แคชของเบราว์เซอร์)",
+            "useRecentDesc": "เชื่อมต่อโดยใช้คีย์ผู้ดูแลระบบที่ใช้ล่าสุด"
+        },
+        "messages": {
+            "configError": "เกิดข้อผิดพลาดในการโหลดไฟล์การตั้งค่า โปรดตรวจสอบว่าเป็น config.json ที่ถูกต้องพร้อม AdminKey",
+            "fetchError": "ไม่สามารถดึงข้อมูลเซิร์ฟเวอร์ได้"
+        }
     },
     "account": {
         "playerInfo": {
