--- a/src/locales/zh_HK/common.json
+++ b/src/locales/zh_HK/common.json
@@ -70,7 +70,22 @@
         "connect": "連接",
         "connected": "已連接",
         "serverTime": "伺服器時間",
-        "memoryUsed": "記憶體使用"
+        "memoryUsed": "記憶體使用",
+        "configDialog": {
+            "title": "管理員密鑰",
+            "description": "請從您的私人伺服器目錄中選擇config.json文件，或手動輸入管理員密鑰。這將把管理員密鑰保存到您的瀏覽器緩存中，以便您以後可以重用。它不會存儲在其他地方。",
+            "selectFile": "選擇配置文件（從電腦）",
+            "selectFileDesc": "從您的私人伺服器目錄中選擇config.json文件",
+            "enterKey": "手動輸入管理員密鑰",
+            "enterKeyDesc": "直接輸入管理員密鑰值。您可以在config.json文件中查找'MuipServer'下的'AdminKey'字符串。",
+            "adminKeyInput": "管理員密鑰",
+            "useRecent": "使用最近的密鑰（瀏覽器緩存）",
+            "useRecentDesc": "使用最近使用的管理員密鑰進行連接"
+        },
+        "messages": {
+            "configError": "加載配置文件出錯。請確保它是包含AdminKey的有效config.json文件",
+            "fetchError": "獲取伺服器信息失敗"
+        }
     },
     "account": {
         "playerInfo": {
